2009-06-08 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* HttpHandlerAction.cs: fix path matching when the pattern has more
	than one slash.

2009-06-05  Marek Habersack  <mhabersack@novell.com>

	* WebConfigurationManager.cs: OpenWebConfiguration caches
	configurations with a key generated from all the parameters passed
	to it, not just from path.
	Added internal GetSection method which takes HttpContext as its
	third parameter - used in calling OpenWebConfiguration.
	FindWebConfig is no longer used in GetSection - it breaks handling
	of <location> elements in config files. Fixes bug #510302

2009-06-03  Marek Habersack  <mhabersack@novell.com>

	* MonoSettingsSection.cs: added new property,
	verificationCompatibility, which serves the same purpose as the
	registry key described in http://support.microsoft.com/kb/932552
	(when set to 1 it turns off virtual path validity
	verification). Fixes bug #509163

2009-05-14  Marek Habersack  <mhabersack@novell.com>

	* HttpHandlersSection.cs: if we're matching a default handler,
	disallow caching.

2009-04-03  Marek Habersack  <mhabersack@novell.com>

	* WebConfigurationManager.cs: added code in the static constructor
	to enable retrieving application settings via
	ApplicationSettingsBase from within asp.net applications. Fixes
	bug #491531

	* ApplicationSettingsConfigurationFileMap.cs: added.

2009-03-12  Dean Brettle  <dean@brettle.com>

	* nBrowser/Build.cs: made Browser() method thread-safe and moved the
	actual tree creation to a private InitializeTree() method for clarity.

2009-03-01  Marek Habersack  <mhabersack@novell.com>

	* WebConfigurationManager.cs: optimized GetWebApplicationSection a
	bit

2009-02-28  Marek Habersack  <mhabersack@novell.com>

	* WebConfigurationManager.cs: make sure no nrex happens in
	GetSectionCacheKey ()

2009-02-26 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* WebConfigurationManager.cs: generate a hash from the string hsah
	codes instead of concatenating them.
