@@ -360,6 +360,8 @@ namespace System.Web.Configuration
 					return configPath == MachinePath || configPath == MachineWebPath;
 				case ConfigurationAllowDefinition.MachineToWebRoot:
 				case ConfigurationAllowDefinition.MachineToApplication:
+					if (String.IsNullOrEmpty (configPath))
+						return true;
 					return (String.Compare (configPath, MachinePath, StringComparison.Ordinal) == 0) ||
 						(String.Compare (configPath, MachineWebPath, StringComparison.Ordinal) == 0) ||
 						(String.Compare (configPath, "/", StringComparison.Ordinal) == 0) ||
