@@ -1,3 +1,10 @@
+2009-07-09 Gonzalo Paniagua Javier <gonzalo@novell.com>
+
+	* WebConfigurationHost.cs: null means MachineToApplication.
+	* WebConfigurationManager.cs: when caching configuration and sections,
+	use the configuration file directory instead of the incoming request
+	path.
+
 2009-06-08 Gonzalo Paniagua Javier <gonzalo@novell.com>
 
 	* HttpHandlerAction.cs: fix path matching when the pattern has more
